grok pattern meraki pipeline

--- a/logstash-loki/logstash-meraki/pipeline/meraki-pipeline.conf
+++ b/logstash-loki/logstash-meraki/pipeline/meraki-pipeline.conf
@@ -6,11 +6,15 @@ input {
 }
 
 filter {
+    grok {
+        match => { "message" => "%{SYSLOG5424PRI}%{NUMBER}%{SPACE}%{NUMBER}%{SPACE}%{WORD:devname}%{SPACE}%{WORD}%{SPACE}%{GREEDYDATA:message}" }
+        overwrite => [ "message" ]
+    }
     mutate {
         add_field => { "source" => "${HOSTNAME}" }
     }
     mutate {
-        replace => { "message" => "%{message} dev_ip=%{[host][ip]}" }
+        replace => { "message" => "%{message} devip=%{[host][ip]}" }
     }
 }
 
