update fortigate pipeline, json encoding

--- a/logstash-loki/logstash-fortigate/pipeline/fortigate-pipeline.conf
+++ b/logstash-loki/logstash-fortigate/pipeline/fortigate-pipeline.conf
@@ -6,40 +6,60 @@ input {
 }
 
 filter {
+    # Parse out syslog priority.
     grok {
         match => { "message" => "%{SYSLOG5424PRI}%{GREEDYDATA:message}" }
         overwrite => [ "message" ]
     }
+    # Parse message as key-value and place in kv key.
     kv {
         field_split => " "
         target => "kv"
     }
+    # Add "syslog_pri" to kv key.
     mutate {
-        add_field => { "source" => "${HOSTNAME}" }
+        copy => { "[log][syslog][priority]" => "[kv][syslog_pri]" }
     }
+    # Add "job" key for loki label.
+    mutate {
+        add_field => { "job" => "syslog" }
+    }
+    # Add "source" key for loki label.
+    if [kv][devname] {
+        mutate {
+            add_field => { "source" => "%{[kv][devname]}" }
+        }
+    }
+    # Update "source" key, create if it does not exists for loki label.
+    if [kv][ap] {
+        mutate {
+            replace => { "source" => "%{[kv][ap]}" }
+        }
+    }
+    # Enrich "dstip" with dns name
     if [kv][dstip] {
         mutate {
-            copy => {"[kv][dstip]" => "[kv][dstfqdn]"}
+            copy => { "[kv][dstip]" => "[kv][dstfqdn]" }
         }
         dns {
             reverse => "[kv][dstfqdn]"
             action => "replace"
         }
-        mutate {
-            replace => { "message" => "%{message} dstfqdn=%{[kv][dstfqdn]}" }
-        }
     }
+    # Enrich "srcip" with dns name
     if [kv][srcip] {
         mutate {
-            copy => {"[kv][srcip]" => "[kv][srcfqdn]"}
+            copy => { "[kv][srcip]" => "[kv][srcfqdn]" }
         }
         dns {
             reverse => "[kv][srcfqdn]"
             action => "replace"
         }
-        mutate {
-            replace => { "message" => "%{message} srcfqdn=%{[kv][srcfqdn]}" }
-        }
+    }
+    # Encode kv as json and place in "json" key.
+    json_encode {
+        source => "kv"
+        target => "json"
     }
 }
 
@@ -47,7 +67,7 @@ output {
     stdout {}
     loki {
         url => "http://loki:3100/loki/api/v1/push"
-        include_fields => ["source"]
-        message_field => "message"
+        include_fields => [ "job", "source" ]
+        message_field => "json"
     }
 }
