--- a/logstash-loki/logstash-meraki/pipeline/meraki-pipeline.conf
+++ b/logstash-loki/logstash-meraki/pipeline/meraki-pipeline.conf
@@ -6,11 +6,41 @@ input {
 }
 
 filter {
+    # Parse out syslog priority.
+    grok {
+        match => { "message" => "%{SYSLOG5424PRI}%{NUMBER}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE:source}%{SPACE}%{NOTSPACE:meraki_event}%{SPACE}%{GREEDYDATA:message}" }
+        overwrite => [ "message" ]
+    }
+    # Parse message as key-value and place in kv key.
+    kv {
+        field_split => " "
+        target => "kv"
+    }
+    # Add "syslog_pri" to kv key.
     mutate {
-        add_field => { "source" => "${HOSTNAME}" }
+        copy => { "[log][syslog][priority]" => "[kv][syslog_pri]" }
+    }
+    # Add "meraki_event" to kv key.
+    mutate {
+        copy => { "[meraki_event]" => "[kv][event]" }
+    }
+    # Add "job" key for loki label.
+    mutate {
+        add_field => { "job" => "syslog" }
+    }
+    # Add "syslog_pri" to kv key.
+    mutate {
+        copy => { "[log][syslog][priority]" => "[kv][syslog_pri]" }
     }
     mutate {
-        replace => { "message" => "%{message} devip=%{[host][ip]}" }
+        gsub => [
+            "source", "_", "-"
+        ]
+    }
+    # Encode kv as json and place in "json" key.
+    json_encode {
+        source => "kv"
+        target => "json"
     }
 }
 
@@ -18,7 +48,7 @@ output {
     stdout {}
     loki {
         url => "http://loki:3100/loki/api/v1/push"
-        include_fields => ["source"]
-        message_field => "message"
+        include_fields => [ "job", "source" ]
+        message_field => "json"
     }
 }
