--- a/logstash-loki/logstash-ciscoise/pipeline/ciscoise-pipeline.conf
+++ b/logstash-loki/logstash-ciscoise/pipeline/ciscoise-pipeline.conf
@@ -1,52 +1,41 @@
 input {
     udp {
-        port => 9005
-        tags => ["meraki"]
+        port => 9006
+        tags => ["ciscoise"]
     }
 }
 
 filter {
     # Parse out syslog priority.
     grok {
-        match => { "message" => "%{SYSLOG5424PRI}%{NUMBER}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE:source}%{SPACE}%{NOTSPACE:meraki_event}%{SPACE}%{GREEDYDATA:message}" }
+        match => { "message" => "%{SYSLOG5424PRI}%{SYSLOGTIMESTAMP} %{NOTSPACE:source} %{NOTSPACE:category} %{GREEDYDATA:message}" }
         overwrite => [ "message" ]
     }
     # Parse message as key-value and place in kv key.
     kv {
-        field_split => " "
+        field_split => ", "
         target => "kv"
     }
     # Add "source" to kv key.
     mutate {
         copy => { "[source]" => "[kv][source]" }
     }
-    # Fix source, replace "_" with "-"
-    mutate {
-        gsub => [
-            "[kv][source]", "_", "-"
-        ]
-    }
-    # Add source ip to kv key.
-    mutate {
-        copy => {"[host][ip]" => "[kv][source_ip]"}
-    }
     # Add "syslog_pri" to kv key.
     mutate {
         copy => { "[log][syslog][priority]" => "[kv][syslog_pri]" }
     }
-    # Add "meraki_event" to kv key.
+    # Add "category" to kv key.
     mutate {
-        copy => { "[meraki_event]" => "[kv][event]" }
+        copy => { "[category]" => "[kv][category]" }
     }
-    # Add "job" key for loki label.
+    # # Add "job" key for loki label.
     mutate {
         add_field => { "job" => "${HOSTNAME}" }
     }
-    # Add "syslog_pri" to kv key.
     mutate {
-        copy => { "[log][syslog][priority]" => "[kv][syslog_pri]" }
+        remove_field => [ "[kv][Step]", "[kv][StepData]" ]
     }
-    # Encode kv as json and place in "json" key.
+    # # Encode kv as json and place in "json" key.
     json_encode {
         source => "kv"
         target => "json"
