--- a/logstash-loki/logstash-fortigate/pipeline/fortigate-pipeline.conf
+++ b/logstash-loki/logstash-fortigate/pipeline/fortigate-pipeline.conf
@@ -22,18 +22,18 @@ filter {
     }
     # Add "job" key for loki label.
     mutate {
-        add_field => { "job" => "syslog" }
+        add_field => { "job" => "${HOSTNAME}" }
     }
     # Add "source" key for loki label.
     if [kv][devname] {
         mutate {
-            add_field => { "source" => "%{[kv][devname]}" }
+            copy => { "[kv][devname]" => "[kv][source]" }
         }
     }
-    # Update "source" key, create if it does not exists for loki label.
+    # Update "source" key, create if it does not exists.
     if [kv][ap] {
         mutate {
-            replace => { "source" => "%{[kv][ap]}" }
+            copy => { "[kv][ap]" => "[kv][source]" }
         }
     }
     # Enrich "dstip" with dns name
@@ -64,10 +64,9 @@ filter {
 }
 
 output {
-    stdout {}
     loki {
         url => "http://loki:3100/loki/api/v1/push"
-        include_fields => [ "job", "source" ]
+        include_fields => [ "job" ]
         message_field => "json"
     }
 }
